# OPNscript

./: .gitignore  README.md  Web.html  index.html  installation.html
docs/: CHANGELOG.md  COMPILATION_GUIDE.md  CONTRIBUTING.md  CREDITS.md  DOCUMENTACION_HTML_ACTUALIZADA.md  LICENSE.md  QUICK_REFERENCE.md  SYSTEM_SUMMARY.md  VERIFICATION_CHECKLIST.md  editor.md  file_types.md  getting_started.md  gfx_api.md  gfx_colors.md  gfx_examples.md  installation.md  language_reference.md  repl.md  standard_library.md  syntax.md  variables.md
js/: installation.html  script.js  search.js
prisma-lang/: LICENSE  README.md  diagnostics.py  pyproject.toml  setup.py
prisma-lang/src/prisma/: __init__.py  __main__.py
prisma-lang/src/prisma/api/: __init__.py  compilation_api.py  config_api.py  pygfx_api.py  server_api.py
prisma-lang/src/prisma/config/: __init__.py  aliases.py  colors.py  keywords.py
prisma-lang/src/prisma/core/: __init__.py  package_loader.py  transpiler.py  visitor.py
prisma-lang/src/prisma/grammar/: Prisma.g4
prisma-lang/src/prisma/tools/: __init__.py  cli.py  editor.py  repl.py
render/: FUNCIONES.md  GUIA_USO.md  INDEX.md  README.md  index.prisma
render/colors/: colors.prisma
render/core/: render.prisma
render/effects/: effects.prisma
render/examples/: demo_completo.prisma  ejemplo_animacion.prisma  ejemplo_basico.prisma
render/shapes/: shapes.prisma
render/utils/: utils.prisma
styles/: main.css
vscode/: FEATURES.md  IMPROVEMENTS.md  README_EDITOR.md  SNIPPETS_AND_FEATURES.md  VSeditor.py  test_example.opn  validate_json.py  verify_setup.py
vscode/recursos/: colores.json  extensions.json  snippets.json
