[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opn-language"
version = "1.0.0"
description = "OPN Language - A friendly multi-paradigm programming language with Python transpiler and integrated IDE"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "OPN Language Project" }
]
keywords = ["programming-language", "transpiler", "python", "graphics", "education", "ide"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
opn = "prisma.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/opn-language"
Documentation = "https://github.com/yourusername/opn-language/tree/main/docs"
Repository = "https://github.com/yourusername/opn-language"
Issues = "https://github.com/yourusername/opn-language/issues"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

[tool.hatch.build.targets.wheel]
# CLAVE: Esta configuración le dice a Hatch que el paquete 'prisma'
# se encuentra dentro del directorio 'src', resolviendo los problemas de importación.
packages = ["src/prisma"]
